Desenvolvimento de mais duas paginas

--- a/styles/global.css
+++ b/styles/global.css
@@ -27,6 +27,7 @@ html{
 }
 
 body{
+    display: flex;
     height: 100vh;
     background: var(--background);
 
@@ -103,3 +104,4 @@ button.outlined,
 .content header img{
     width: 16.7rem;
 }
+
