--- a/styles/home.css
+++ b/styles/home.css
@@ -14,15 +14,17 @@ header{
     grid-area: left;
 
     background: url('/assets/home-bg-img.svg') no-repeat top/contain;
+    background-position-x:-5rem ;
 }
 main{
     grid-area: right;
 
     display: flex;
     align-items: center;
+    margin-top: -12rem;
 }
 main .container{
-    width: min(36.3rem 100%);
+    width: min(36.3rem, 100%);
 }
 main h2{
         font-family: 'Poppins', sans-serif;
@@ -42,3 +44,53 @@ input, button, .button{
     width: 100%;
     margin-bottom: 1.8rem;
 }
+/* erro no ou*/
+ .separator{
+     display: flex;
+     align-items: center;
+
+     margin: 4rem 0;
+
+ }
+ .separator div:nth-child(2){
+           color: var(--grey-blue);
+           align-items: center;
+           font-family: 'Poppins', sans-serif;
+           padding: 0 1.35rem;
+           line-height: 0;
+
+ }
+ .separator div:nth-child(1),
+ .separator div:nth-child(3){
+     background: var(--grey-blue);
+     width: 100%;
+     height: 1px;
+ }
+             /* criar bolas*/
+.ball{
+    width: 21.2rem;
+    height: 21.2rem;
+    background: var(--blue);
+    clip-path: circle();
+    opacity: 0.1;
+
+    position: fixed;
+
+}
+
+.ball.top{
+    top: -45rem;
+    width: 63.3rem;
+    height: 63.3rem;
+    right: -37rem;
+    
+
+}
+
+.ball.botton{
+    bottom: -15rem;
+    right: 5.6rem;
+
+
+}
+  
