--- a/styles/global.css
+++ b/styles/global.css
@@ -19,7 +19,7 @@ html{
 
       --grey-dark:#4D5E77;
       --grey-blue:#A1B2CD;
-      --grey-medium:#D3D9E2;
+      --grey-medium:#eaecf2;
       --grey-light:#E5EAF1;
       
       --font-size:62,5%;
@@ -95,6 +95,22 @@ button.outlined,
     color: var(--blue);
     border: .2rem solid var(--blue);
 }
+
+      /********* Botton Modal *******/
+
+button.red,
+.button.red{
+    background: var(--red);
+    color: var(--white);
+}
+
+.button.grey,
+.button.grey{
+   background: var(--grey-light);
+   color: var(--grey-dark);
+}
+
+       /******** Header *******/
 
 .content header{
     width: 80%;
