--- a/src/views/room.ejs
+++ b/src/views/room.ejs
@@ -19,6 +19,9 @@
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
         <link href="https://fonts.googleapis.com/css2?family=Open+Sans&family=Poppins:wght@500;700&display=swap" rel="stylesheet">
+
+        <!-- Scripts -->
+        <script src="scripts/main.js" defer type="module"></script>
     </head>
     <body>
         <div id="room" class="content">
@@ -34,7 +37,7 @@
                         <img src="/images/copy.svg" alt="copia"/>
                     </div>
 
-                    <a href="" class="button">
+                    <a href="#" class="button">
                         <img src="/images/users-white.svg " alt="criar sala">
                         Criar sala
                     </a>
@@ -165,7 +168,7 @@
                 </form>
 
                 <div class="buttons">
-                    <div class="button grey">Cancelar</div>
+                    <div class="button grey cancel">Cancelar</div>
                     <button class="red">Sim, excluir</button>
                 </div>
 
